# django-helsinki-suomifi-messages

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml  release-please.yml
suomifi_messages/: __init__.py  admin.py  app_settings.py  apps.py  client.py  errors.py  models.py  schemas.py  settings.py  utils.py
tests/: settings.py  test_client.py  test_errors.py  test_schemas.py  test_utils.py
tests/client/: conftest.py  test_attachments.py  test_auth.py  test_builders.py  test_core.py  test_mailboxes.py  test_retrieve.py  test_send.py
