[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-helsinki-suomifi-messages"
version = "0.0.0"
authors = [{ name = "City of Helsinki", email = "dev@hel.fi" }]
description = "Suomi.fi messages for City of Helsinki Django apps"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "django",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["requests>=2.32.5","django>=5.2",]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytest-factoryboy",
    "factory_boy",
    "coverage-enable-subprocess",
    "coverage[toml]",
    "pytest-mock",
    "pytest-randomly",
    "pytest-rerunfailures",
    "pytest-xdist[psutil]",
    "requests-mock",
]
all = ["django-helsinki-suomifi-messages[test]"]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-helsinki-suomifi-messages"
Issues = "https://github.com/City-of-Helsinki/django-helsinki-suomifi-messages/issues"

[tool.coverage.run]
source = ["suomifi_messages"]
omit = ["**/migrations/*"]

[tool.hatch.build.targets.wheel]
packages = ["suomifi_messages"]

[tool.hatch.envs.default]
dependencies = [
    "django~=5.2",
    "pre-commit",
]
features = ["all"]
python = "3.10"

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = [
    "pre-commit install",
    "pre-commit run -a",
]
manage = "tests/manage.py {args}"

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
features = ["all"]
matrix-name-format = "dj{value}"
parallel = false
randomize = true

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
django = ["5.2"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13", "3.14"]
django = ["6.0"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}" },
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "./tests/manage.py makemigrations --check",
    "pytest{env:HATCH_TEST_ARGS:} {args}",
]
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.pytest.ini_options]
django_find_project = false
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."
requests_mock_case_sensitive = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
]
